frontend/tests/cases/positive/synInterfaceEmptyWithConstraints.gr
-- empty interface with constraints
interface Simple a

interface {Simple a} => Simple2 a
