frontend/tests/cases/negative/interfaces/kind-mismatch/badKindInInterfaceConstraint.gr
data A = A

-- 'A' is not a valid constraint
interface {A} => Simple a
